   * Added support for reserving slots when reloading game
   * Fixed timer end warning not to play in opponents turn (bug: #11517)
   * Teams are now translated localy for all clients (bug: #3676)
 * miscellaneous and bug fixes:
   * Fixed droiding not to make wesnoth think player is observer (bug: #9675)
   * Fixed statitics not add turn data from previus scenarios (bug: #11719)
   * Removed persistance from team configuration (bug: #10916)
   * Made automaticaly generated macro reference easier to naviagate and link to
	 (patch: #1076)

Version 1.5.1:
 * campaigns:
   * Descent into Darkness:
     * fixed a crash in 'Return to Parthyn'
   * Eastern Invasion:
     * fixed a crash in 'Xenophobia'
   * Heir to the Throne:
     * allowed Kalenz to take the flaming sword
   * The Rise of Wesnoth:
     * fixed the Wesfolk Outcast line's distract ability not working
     * increased the gold you get from not letting Lady Outlaw join you in the
       second scenario
     * removed the outlaw princess and outlaw queen and instead made Jessica
       only have one unit line
   * Son of the Black Eye:
     * fixed a crash in 'Dwarvish Stand'
   * An Orcish Incursion
     * new storyline and dialogues to scenario 1
     * new storyline and dialogues to scenario 2
     * made the AI do mixed recruits in scenario 2
     * new storyline and dialogues to scenario 3
     * added a form of gold bonus to scenario 3
     * new storyline to scenario 4
   * Under the Burning Suns
     * fixed event spawning elves in outer villages
 * game engine:
   * poison no longer prevents resting
 * graphics:
   * new portraits: Red Mages, Dark Adepts, White Mages
   * new ford graphics from Syntax_Error
   * added a sea serpent portrait by Pic
   * various improvements to the new widget library
 * language and i18n:
   * new translations: Arabic, Friulian, Macedonian
   * updated translations: Chinese, Czech, Danish, Dutch, Estonian, Finnish,