@@ -25,6 +25,7 @@ Version 1.5.1+svn:
  * miscellaneous and bug fixes:
    * Fixed droiding not to make wesnoth think player is observer (bug: #9675)
    * Fixed statitics not add turn data from previus scenarios (bug: #11719)
+   * Fixed manager to initialize before gamestate in playcontroller (bug: 11935)
    * Removed persistance from team configuration (bug: #10916)
    * Made automaticaly generated macro reference easier to naviagate and link to
 	 (patch: #1076)
